feat: enhance data seeding process and update CORS configuration for development